--- a/design.css
+++ b/design.css
@@ -21,6 +21,9 @@ span {
   height: 85%;
   text-align: center;
 }
+#birthdate-form {
+  display: block;
+}
 * {
   box-sizing: border-box;
 }
@@ -46,6 +49,7 @@ button {
   border-radius: 4px;
   cursor: pointer;
   float: right;
+  margin: 10px 20px;
 }
 
 button:hover {
